--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1136,7 +1136,7 @@ section.lazy-placeholder:after {
 }
 .cid-s0hIqeRZUB .nav-link:hover,
 .cid-s0hIqeRZUB .dropdown-item:hover {
-  color: #efefef !important;
+  color: #f5bb15 !important;
 }
 .cid-s0hRqRPlN7 {
   padding-top: 105px;
