--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1395,7 +1395,7 @@ section.lazy-placeholder:after {
 }
 .cid-s0niHySRAi {
   padding-top: 120px;
-  padding-bottom: 45px;
+  padding-bottom: 0px;
 }
 .cid-s0niHySRAi .mbr-text {
   color: #efefef;
@@ -1416,29 +1416,16 @@ section.lazy-placeholder:after {
   color: #f5bb15;
   text-align: left;
 }
-.cid-s0npPCNPdp {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #232323;
+.cid-s3dcEh0LGh {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/backgrond.xadres-2000x1200.png");
 }
-.cid-s0npPCNPdp .line {
-  background-color: #232323;
-  color: #232323;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
+.cid-s3dcEh0LGh P {
+  color: #767676;
 }
-.cid-s0npPCNPdp .section-text {
-  padding: 2rem 0;
-  color: #f5bb15;
-}
-.cid-s0npPCNPdp .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-s0npPCNPdp .inner-container {
-    width: 100% !important;
-  }
+.cid-s3dcEh0LGh H1 {
+  color: #c1c1c1;
 }
 .cid-s0nqw2tKLC {
   padding-top: 105px;
