create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1451,7 +1451,7 @@ section.lazy-placeholder:after {
 .cid-s0nrUx05hR {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/maxresdefault21-1280x720.jpg");
+  background-image: url("../../../assets/images/backgrond.xadres-890x534.png");
 }
 @media (max-width: 767px) {
   .cid-s0nrUx05hR .media-wrap {
