--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -712,7 +712,7 @@ section.lazy-placeholder:after {
 .cid-s0hNEG1d92 {
   padding-top: 120px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/wall.logo-509x339.jpg");
+  background-image: url("../../../assets/images/backgrond.xadres-890x534.png");
 }
 .cid-s0hNEG1d92 .media-container-row {
   flex-direction: row-reverse;
