create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 
 
 
@@ -8,7 +8,7 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2.8rem;
   font-display: swap;
 }
@@ -16,7 +16,7 @@ body {
   font-size: 4.48rem;
 }
 .display-2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2.2rem;
   font-display: swap;
 }
@@ -24,7 +24,7 @@ body {
   font-size: 3.52rem;
 }
 .display-4 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.8rem;
   font-display: swap;
 }
@@ -32,7 +32,7 @@ body {
   font-size: 1.28rem;
 }
 .display-5 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2.4rem;
   font-display: swap;
 }
@@ -40,7 +40,7 @@ body {
   font-size: 3.84rem;
 }
 .display-7 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -101,7 +101,7 @@ body {
   background-color: #f5bb15 !important;
 }
 .bg-warning {
-  background-color: #f5bb15 !important;
+  background-color: #cccccc !important;
 }
 .bg-danger {
   background-color: #f5bb15 !important;
@@ -188,23 +188,23 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #f5bb15 !important;
-  border-color: #f5bb15 !important;
-  color: #ffffff !important;
+  background-color: #cccccc !important;
+  border-color: #cccccc !important;
+  color: #4d4d4d !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff !important;
-  background-color: #b68908 !important;
-  border-color: #b68908 !important;
+  color: #4d4d4d !important;
+  background-color: #a6a6a6 !important;
+  border-color: #a6a6a6 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
-  color: #ffffff !important;
-  background-color: #b68908 !important;
-  border-color: #b68908 !important;
+  color: #4d4d4d !important;
+  background-color: #a6a6a6 !important;
+  border-color: #a6a6a6 !important;
 }
 .btn-danger,
 .btn-danger:active {
@@ -352,22 +352,22 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #9d7607;
-  color: #9d7607;
+  border-color: #999999;
+  color: #999999;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
-  color: #ffffff;
-  background-color: #f5bb15;
-  border-color: #f5bb15;
+  color: #4d4d4d;
+  background-color: #cccccc;
+  border-color: #cccccc;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
-  color: #ffffff !important;
-  background-color: #f5bb15 !important;
-  border-color: #f5bb15 !important;
+  color: #4d4d4d !important;
+  background-color: #cccccc !important;
+  border-color: #cccccc !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
@@ -436,7 +436,7 @@ body {
   color: #f5bb15 !important;
 }
 .text-warning {
-  color: #f5bb15 !important;
+  color: #cccccc !important;
 }
 .text-danger {
   color: #f5bb15 !important;
@@ -465,7 +465,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #9d7607 !important;
+  color: #999999 !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -486,7 +486,7 @@ a.text-black:focus {
   background-color: #f5bb15;
 }
 .alert-warning {
-  background-color: #f5bb15;
+  background-color: #cccccc;
 }
 .alert-danger {
   background-color: #f5bb15;
@@ -535,7 +535,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #fdf4d9;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -546,7 +546,7 @@ a:hover {
   display: none;
 }
 .form-control {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -738,6 +738,13 @@ section.lazy-placeholder:after {
 }
 .cid-s7RdN5ayj9 H1 {
   color: #c1c1c1;
+}
+.cid-s7RdN5ayj9 H3 {
+  text-align: center;
+}
+.cid-s7RdN5ayj9 .mbr-text,
+.cid-s7RdN5ayj9 .mbr-section-btn {
+  text-align: center;
 }
 .cid-s0hIqeRZUB .navbar {
   padding: .5rem 0;
@@ -985,7 +992,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s0hIqeRZUB .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.5rem);
+    max-height: calc(98.5vh - 5.4rem);
   }
 }
 .cid-s0hIqeRZUB .collapsed button.navbar-toggler {
@@ -1400,7 +1407,7 @@ section.lazy-placeholder:after {
 }
 .cid-s0niHySRAi .mbr-text {
   color: #efefef;
-  text-align: left;
+  text-align: center;
 }
 .cid-s0niHySRAi h4 {
   text-align: center;
@@ -1415,7 +1422,7 @@ section.lazy-placeholder:after {
 .cid-s0niHySRAi .card-title,
 .cid-s0niHySRAi .card-img {
   color: #f5bb15;
-  text-align: left;
+  text-align: center;
 }
 .cid-s3dcEh0LGh {
   padding-top: 60px;
@@ -1448,6 +1455,9 @@ section.lazy-placeholder:after {
 }
 .cid-s0nqw2tKLC textarea.form-control {
   min-height: 188px;
+}
+.cid-s0nqw2tKLC LABEL {
+  text-align: center;
 }
 .cid-s0nrUx05hR {
   padding-top: 90px;
